--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "zshenv"]
 	path = zshenv
 	url = https://github.com/raphaelweis/zshenv.git
+[submodule "sddm-themes"]
+	path = sddm-themes
+	url = https://github.com/raphaelweis/sddm-themes.git
