--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "sddm-themes"]
 	path = sddm-themes
 	url = https://github.com/raphaelweis/sddm-themes.git
+[submodule "i3"]
+	path = i3
+	url = https://github.com/raphaelweis/i3.git
